Fix layout issue on smaller screens

--- a/mascot.css
+++ b/mascot.css
@@ -58,9 +58,20 @@ canvas {
 	background-color: #353535;
 }
 
+#testing_column {
+	display: inline-block;
+	width: 810px;
+}
+
 #testing {
 	border: 5px solid black;
-	display: inline-block;
+}
+
+#generate_code {
+	width: 200px;
+	height: 50px;
+	margin-top: 30px;
+	margin-bottom: 30px;
 }
 
 #display {
@@ -162,13 +173,6 @@ canvas {
 	vertical-align: top;
 }
 
-#generate_code {
-	display: block;
-	margin-top: 30px;
-	width: 200px;
-	height: 50px;
-}
-
 #rSl{
 	width: 300px;
 }
@@ -188,6 +192,7 @@ canvas {
 #modes {
 	display: inline-block;
 	margin-left: 10px;
+	vertical-align: top;
 }
 
 #simulator {
